more mocking issues and other issues fixed